# dewey

./: LICENSE.md  Makefile  pyproject.toml
.devcontainer/: create.sh  devcontainer.json  start.sh
src/dewey/: __init__.py
tests/: conftest.py  test_setup.py
