[tool.poetry]
name = "dewey"
version = "0.1.0"
description = "Hides dev boilerplate"
authors = ["LSmith-Zenoscave <lsmith@zenoscave.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/dewey"}]
homepage = "https://github.com/LSmith-Zenoscave/dewey"
repository = "https://github.com/LSmith-Zenoscave/dewey"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
coverage = "7.1.0"
darglint = "^1.8.1"
Faker = "16.6.1"
flake8 = "^4.0.1"
flake8-bandit = "^3.0"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.2.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.6.0"
flake8-simplify = "^0.19.3"
flakeheaven = "^3.0.0"
isort = "^5.10.1"
mypy = "^0.971"
pep8-naming = "^0.13.2"
pytest = "^7.1.3"
pytest-clarity = "^1.0.1"
pytest-cov = "4.0.0"
pytest-random-order = "^1.0.4"
pytest-sugar = "^0.9.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["dewey"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests",
]
addopts = ["--random-order", "-vv"]

[tool.flakeheaven]
exclude = ["*.md", ".env", ".git", ".gitignore"]
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakeheaven.plugins]
darglint = ["+*"]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*", "-B950"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-docstrings = ["+*", "-D400"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-simplify = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-W503"]
pyflake = ["+*"]
pyflakes = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]
flake8-docstrings = ["-D100"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = "tests"

[tool.isort]
profile = "black"
atomic = true
line_length = 88
use_parentheses = true

[tool.black]
line_length = 88
include = '\.pyi?$'